<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_language"
        android:title="@string/btn_switch_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_theme"
        android:title="@string/menu_theme"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_theme_light"
                    android:icon="@drawable/ic_theme_light"
                    android:title="@string/theme_light"
                    android:checkable="true" />
                <item
                    android:id="@+id/action_theme_dark"
                    android:icon="@drawable/ic_theme_dark"
                    android:title="@string/theme_dark"
                    android:checkable="true" />
                <item
                    android:id="@+id/action_theme_system"
                    android:icon="@drawable/ic_theme_system"
                    android:title="@string/theme_system"
                    android:checkable="true" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        app:showAsAction="never" />
</menu>
